-Buffed spooky scroll damage from 15 to 20
-Pumptergiest projectiles now only spawn if you are holding a weapon, their damage now scales with the damage of that weapon (with a minimum of 30 damage), and reduced the minimum time for a pumpkin to spawn from 6 to 5 seconds
-Zappy Zucchini lightning now does damage equal to 8% of an enemies maximum health instead of having a flat damage value of 20
-Rotten gourd armor stat bonuses have been buffed: Head - 10% melee crit, Body - 12% melee damage, Legs - 10% melee speed
-Rotten gourd armor set bonus no longer applies only to melee weapons, it now works with all weapons
-Gourd decay debuff from gourd armor now lowers enemy defense along with the damage over time
-Spirit horseman armor set defense and stats have been buffed: Head - 6 defense and 12% crit chance, Body - 7 defense and 15% damage, Legs - 6 defense and 20% movement speed
-Buffed spirit horseman armor head minion damage from 35 to 40
-Buffed living flesh mask and leggings defense from 3 to 4
-Buffed gore armor defense: Hood - 14 defense, Mask - 10 defense, Body - 15 defense, Legs - 12 defense


Whip Changes:

-Spore smacker damage nerfed from 15 to 8 and it now has 3 summon tag damage
-Licker now has 7 summon tag damage
-Exposed nerve damage buffed from 42 to 45
-Pheromone stinger extra spider minion damage nerfed from 40% to 20%, but it now gives 10% summon tag critical strike chance for spider minions along with the damage bonus
-Leecher now has 10 summon tag damage
-Living eye lasher damage buffed from 75 to 82

Magic Weapon Changes:

-Snot nosed tome no longer flies to your cursor, it now summons the channeled nose above you, and shoots boogers at your cursor
-Changed moocher staff projectile to be a giant cursed fire explosion that launches some cursed fireballs upward, it now does more damage, is more useful against flying targets, and visually looks better